--- a/src/app/login/signin-or-register-page/signin-or-register-page.component.scss
+++ b/src/app/login/signin-or-register-page/signin-or-register-page.component.scss
@@ -14,3 +14,30 @@
 .already {
     font-size: 20px;
 }
+
+h1 {
+    overflow: hidden;
+    text-align: center;
+    color: gray;
+}
+
+h1:before,
+h1:after {
+    background-color: gray;
+    content: "";
+    display: inline-block;
+    height: 1px;
+    position: relative;
+    vertical-align: middle;
+    width: 50%;
+}
+
+h1:before {
+    right: 0.5em;
+    margin-left: -50%;
+}
+
+h1:after {
+    left: 0.5em;
+    margin-right: -50%;
+}
