--- a/src/app/login/signin-page/signin-page.component.scss
+++ b/src/app/login/signin-page/signin-page.component.scss
@@ -7,3 +7,12 @@
     font-size: 20px;
     text-align: center;
 }
+
+.row {
+    text-align: center;
+    padding-bottom: 5%;
+}
+
+.small-text {
+    text-align: center;
+}
