--- a/src/app/login/signin-page/signin-page.component.html
+++ b/src/app/login/signin-page/signin-page.component.html
@@ -18,7 +18,7 @@
         </ion-item>
         <ion-row class="row">
             <ion-col>
-                <ion-button [routerLink]="['/playlist']" [disabled]="signinForm.invalid" expand="block" type="submit" color="primary">Sign In</ion-button>
+                <ion-button [routerLink]="['/home']" [disabled]="signinForm.invalid" expand="block" type="submit" color="primary">Sign In</ion-button>
                 <a [routerLink]="['/forgot-password']" class="small-text">Forgot Password?</a>
             </ion-col>
         </ion-row>
