--- a/src/app/modals/create-musique/create-musique.component.html
+++ b/src/app/modals/create-musique/create-musique.component.html
@@ -1,4 +1,4 @@
-<form [formGroup]="todoForm" (ngSubmit)="addTodo()">
+<form [formGroup]="todoForm" (ngSubmit)="addMusique()">
     <ion-item>
         <ion-label position="stacked">Name</ion-label>
         <ion-input formControlName="name"></ion-input>
