--- a/src/app/playlist/playlist-detail/playlist-detail.component.html
+++ b/src/app/playlist/playlist-detail/playlist-detail.component.html
@@ -1,7 +1,7 @@
 <ion-header [translucent]="true">
     <ion-toolbar>
       <ion-title>
-        {{playlist?.name | titlecase}}
+        {{playlist?.nom | titlecase}}
       </ion-title>
     </ion-toolbar>
   </ion-header>
@@ -9,26 +9,28 @@
   <ion-content [fullscreen]="true">
     <ion-header collapse="condense">
       <ion-toolbar>
-        <ion-title size="large">{{playlist?.name | titlecase}}</ion-title>
+        <ion-title size="large">{{playlist?.nom | titlecase}}</ion-title>
       </ion-toolbar>
     </ion-header>
   
     <div id="container">
       <ion-list>
-  
-        <ion-item-sliding *ngFor="let todo of playlist.todos">
+        <ng-container *ngIf="playlist$ | async as playlist;">
+        <ion-item-sliding *ngFor="let musique of playlist.musiques;">
           <ion-item>
-            <ion-label>{{ todo.name }}</ion-label>
+            <ion-label>{{ musique.nom }}</ion-label>
+            <ion-label>{{ musique.idAutheur }}</ion-label>
           </ion-item>
           <ion-item-options side="end">
-            <ion-item-option (click)="delete(todo)" color="danger">
+            <ion-item-option (click)="delete(music)" color="danger">
               <ion-icon slot="icon-only" name="trash"></ion-icon>
             </ion-item-option>
           </ion-item-options>
         </ion-item-sliding>
+      </ng-container>
   
       </ion-list>
   
-      <ion-button expand="block" (click)="openModal()">Add Todo</ion-button>
+      <ion-button expand="block" (click)="openModal()">Add Musique</ion-button>
     </div>
   </ion-content>
