--- a/src/app/playlist/playlist-detail/playlist-detail.component.html
+++ b/src/app/playlist/playlist-detail/playlist-detail.component.html
@@ -19,7 +19,7 @@
         <ion-item-sliding *ngFor="let musique of playlist.musiques;">
           <ion-item>
             <ion-label>{{ musique.nom }}</ion-label>
-            <ion-label>{{ musique.idAutheur }}</ion-label>
+            <ion-label>{{ musique.idAuteur }}</ion-label>
           </ion-item>
           <ion-item-options side="end">
             <ion-item-option (click)="delete(music)" color="danger">
