--- a/src/app/playlist/playlist-detail/playlist-detail.component.html
+++ b/src/app/playlist/playlist-detail/playlist-detail.component.html
@@ -1,36 +1,27 @@
-<ion-header [translucent]="true">
-    <ion-toolbar>
-      <ion-title>
-        {{playlist?.nom | titlecase}}
-      </ion-title>
-    </ion-toolbar>
-  </ion-header>
-  
-  <ion-content [fullscreen]="true">
-    <ion-header collapse="condense">
-      <ion-toolbar>
-        <ion-title size="large">{{playlist?.nom | titlecase}}</ion-title>
-      </ion-toolbar>
+<ng-container *ngIf="playlist$ | async as playlist;">
+    <ion-header [translucent]="true">
+        <ion-toolbar>
+            <ion-title>
+                {{playlist.nom}}
+            </ion-title>
+        </ion-toolbar>
     </ion-header>
-  
-    <div id="container">
-      <ion-list>
-        <ng-container *ngIf="playlist$ | async as playlist;">
-        <ion-item-sliding *ngFor="let musique of playlist.musiques;">
-          <ion-item>
-            <ion-label (click)="playMusique(musique)">{{ musique.nom }}</ion-label>
-            <ion-label>{{ musique.idAuteur }}</ion-label>
-          </ion-item>
-          <ion-item-options side="end">
-            <ion-item-option (click)="delete(music)" color="danger">
-              <ion-icon slot="icon-only" name="trash"></ion-icon>
-            </ion-item-option>
-          </ion-item-options>
-        </ion-item-sliding>
-      </ng-container>
-  
-      </ion-list>
-  
-      <ion-button expand="block" (click)="openModal()">Add Musique</ion-button>
-    </div>
-  </ion-content>
+    <ion-content [fullscreen]="true">
+        <div id="container">
+            <ion-list>
+                <ion-item-sliding *ngFor="let musique of playlist.musiques;">
+                    <ion-item>
+                        <ion-label (click)="playMusique(musique)">{{ musique.nom }}</ion-label>
+                        <ion-label>{{ musique.idAuteur }}</ion-label>
+                    </ion-item>
+                    <ion-item-options side="end">
+                        <ion-item-option (click)="delete(musique)" color="danger">
+                            <ion-icon slot="icon-only" name="trash"></ion-icon>
+                        </ion-item-option>
+                    </ion-item-options>
+                </ion-item-sliding>
+            </ion-list>
+            <ion-button expand="block" (click)="openModal()">Add Musique</ion-button>
+        </div>
+    </ion-content>
+</ng-container>
