--- a/src/app/playlist/playlist-detail/playlist-detail.component.html
+++ b/src/app/playlist/playlist-detail/playlist-detail.component.html
@@ -1,27 +1,37 @@
 <ng-container *ngIf="playlist$ | async as playlist;">
-    <ion-header [translucent]="true">
+    <ion-header>
         <ion-toolbar>
-            <ion-title>
-                {{playlist.nom}}
-            </ion-title>
+            <ion-buttons slot="start">
+                <ion-back-button></ion-back-button>
+            </ion-buttons>
+            <ion-title>{{playlist.nom}}</ion-title>
         </ion-toolbar>
     </ion-header>
     <ion-content [fullscreen]="true">
-        <div id="container">
-            <ion-list>
-                <ion-item-sliding *ngFor="let musique of playlist.musiques;">
-                    <ion-item>
-                        <ion-label (click)="playMusique(musique)">{{ musique.nom }}</ion-label>
-                        <ion-label>{{ musique.idAuteur }}</ion-label>
-                    </ion-item>
-                    <ion-item-options side="end">
-                        <ion-item-option (click)="delete(musique)" color="danger">
-                            <ion-icon slot="icon-only" name="trash"></ion-icon>
-                        </ion-item-option>
-                    </ion-item-options>
-                </ion-item-sliding>
-            </ion-list>
-            <ion-button expand="block" (click)="openModal()">Add Musique</ion-button>
-        </div>
+
+        <ion-button expand="block" (click)="openModal()">Add Musique</ion-button>
+
+        <ion-list>
+            <ion-list-header>
+                {{playlist.nom}}
+            </ion-list-header>
+
+            <ion-item-sliding *ngFor="let musique of playlist.musiques;">
+                <ion-item (click)="playMusique(musique)">
+                    <ion-avatar slot="start">
+                        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRspsZ1EU8IH4m29uCG9eQ6UrrdtfwF8uFtN_nzxOPoj-YHbvv9X80_GApgrWKupB0UdL0&usqp=CAU">
+                    </ion-avatar>
+                    <ion-label>
+                        <h2>{{ musique.nom }}</h2>
+                        <h3>{{ musique.idAuteur }}</h3>
+                    </ion-label>
+                </ion-item>
+                <ion-item-options side="end">
+                    <ion-item-option (click)="delete(musique)" color="danger">
+                        <ion-icon slot="icon-only" name="trash"></ion-icon>
+                    </ion-item-option>
+                </ion-item-options>
+            </ion-item-sliding>
+        </ion-list>
     </ion-content>
 </ng-container>
