--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -14,12 +14,12 @@
     </ion-header>
     <ion-item detail class="item" [routerLink]="['playlist']">
         <ion-label>
-            Playlist
+            Playlists
         </ion-label>
     </ion-item>
     <ion-item detail class="item">
         <ion-label>
-            Artistes
+            Artists
         </ion-label>
     </ion-item>
     <ion-item detail class="item" [routerLink]="['albums']">
@@ -27,9 +27,9 @@
             Albums
         </ion-label>
     </ion-item>
-    <ion-item detail class="item" [routerLink]="['morceaux']">
+    <ion-item detail class="item" [routerLink]="['tracks']">
         <ion-label>
-            Morceaux
+            Tracks
         </ion-label>
     </ion-item>
 </ion-content>
