--- a/src/app/playlist/playlist-detail/playlist-detail.component.html
+++ b/src/app/playlist/playlist-detail/playlist-detail.component.html
@@ -1,5 +1,5 @@
 <ng-container *ngIf="playlist$ | async as playlist;">
-    <ion-header>
+    <ion-header [translucent]="true">
         <ion-toolbar>
             <ion-buttons slot="start">
                 <ion-back-button></ion-back-button>
@@ -8,14 +8,15 @@
         </ion-toolbar>
     </ion-header>
     <ion-content [fullscreen]="true">
+        <ion-header collapse="condense">
+            <ion-toolbar>
+                <ion-title size="large">{{playlist.nom}}</ion-title>
+            </ion-toolbar>
+        </ion-header>
 
         <ion-button expand="block" (click)="openModal()">Add Musique</ion-button>
 
         <ion-list>
-            <ion-list-header>
-                {{playlist.nom}}
-            </ion-list-header>
-
             <ion-item-sliding *ngFor="let musique of playlist.musiques;">
                 <ion-item [routerLink]="['music/'+musique.nom]" (click)="playMusique(musique)">
                     <ion-avatar slot="start">
@@ -23,7 +24,7 @@
                     </ion-avatar>
                     <ion-label>
                         <h2>{{ musique.nom }}</h2>
-                        <h3>{{ musique.idAuteur }}</h3>
+                        <p>{{ musique.idAuteur }}</p>
                     </ion-label>
                 </ion-item>
                 <ion-item-options side="end">
