--- a/src/app/playlist/playlist.page.html
+++ b/src/app/playlist/playlist.page.html
@@ -3,6 +3,11 @@
         <ion-buttons slot="start">
             <ion-back-button></ion-back-button>
         </ion-buttons>
+        <ion-buttons slot="end">
+            <ion-button (click)="openModal()">
+                <ion-icon name="add-outline"></ion-icon>
+            </ion-button>
+        </ion-buttons>
         <ion-title>Playlists</ion-title>
     </ion-toolbar>
 </ion-header>
@@ -14,19 +19,16 @@
         </ion-toolbar>
     </ion-header>
 
-    <div id="container">
-        <ion-list>
-            <ion-item-sliding *ngFor="let playlist of playlists$ | async;">
-                <ion-item [routerLink]="[playlist?.id]" routerLinkActive="true">
-                    <ion-label>{{ playlist.nom }}</ion-label>
-                </ion-item>
-                <ion-item-options side="end">
-                    <ion-item-option (click)="delete(playlist)" color="danger">
-                        <ion-icon slot="icon-only" name="trash"></ion-icon>
-                    </ion-item-option>
-                </ion-item-options>
-            </ion-item-sliding>
-        </ion-list>
-        <ion-button expand="block" (click)="openModal()">Add Playlist</ion-button>
-    </div>
+    <ion-list>
+        <ion-item-sliding *ngFor="let playlist of playlists$ | async;">
+            <ion-item [routerLink]="[playlist?.id]" routerLinkActive="true">
+                <ion-label>{{ playlist.nom }}</ion-label>
+            </ion-item>
+            <ion-item-options side="end">
+                <ion-item-option (click)="delete(playlist)" color="danger">
+                    <ion-icon slot="icon-only" name="trash"></ion-icon>
+                </ion-item-option>
+            </ion-item-options>
+        </ion-item-sliding>
+    </ion-list>
 </ion-content>
