--- a/src/app/tabs/tabs.page.scss
+++ b/src/app/tabs/tabs.page.scss
@@ -10,6 +10,7 @@
         width: 100%;
         .progress {
             height: 100%;
+            background-color: var(--ion-text-color);
         }
     }
 }
