--- a/src/app/home/morceaux/morceaux.component.html
+++ b/src/app/home/morceaux/morceaux.component.html
@@ -1,3 +1,31 @@
-<p>
-  morceaux works!
-</p>
+<ion-header [translucent]="true">
+    <ion-toolbar>
+        <ion-buttons slot="start">
+            <ion-back-button></ion-back-button>
+        </ion-buttons>
+        <ion-title>Tracks</ion-title>
+    </ion-toolbar>
+</ion-header>
+
+<ion-content [fullscreen]="true">
+    <ion-header collapse="condense">
+        <ion-toolbar>
+            <ion-title size="large">Tracks</ion-title>
+        </ion-toolbar>
+    </ion-header>
+
+    <ion-list>
+        <ion-item *ngFor="let music of musics$ | async;">
+            <ion-item class="music" [routerLink]="['music/'+music.nom]" (click)="playMusique(music)">
+                <ion-avatar slot="start">
+                    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRspsZ1EU8IH4m29uCG9eQ6UrrdtfwF8uFtN_nzxOPoj-YHbvv9X80_GApgrWKupB0UdL0&usqp=CAU">
+                </ion-avatar>
+                <ion-label>
+                    <h2>{{ music.nom }}</h2>
+                    <p>{{ music.idAuteur }}</p>
+                </ion-label>
+            </ion-item>
+            <ion-icon slot="end" name="ellipsis-vertical" (click)="openPopover($event,music)"></ion-icon>
+        </ion-item>
+    </ion-list>
+</ion-content>
