implem queue with next track

--- a/src/app/home/play-music-page/play-music-page.component.html
+++ b/src/app/home/play-music-page/play-music-page.component.html
@@ -32,7 +32,7 @@
             <ion-button (click)="playPause()" shape="round" color="light">
                 <ion-icon slot="icon-only" [name]="playIcon"></ion-icon>
             </ion-button>
-            <ion-button shape="round" color="light">
+            <ion-button (click)="nextMusique()" shape="round" color="light">
                 <ion-icon slot="icon-only" name="play-forward-outline"></ion-icon>
             </ion-button>
         </ion-card-content>
