--- a/src/app/popovers/music-popover/music-popover.component.html
+++ b/src/app/popovers/music-popover/music-popover.component.html
@@ -1,6 +1,6 @@
 <ion-list>
     <ion-list-header>{{musics.nom}}</ion-list-header>
-    <ion-item button *ngIf="!inPlaylist">Add to playlist</ion-item>
+    <ion-item button *ngIf="!inPlaylist" (click)="openPlaylistPopover($event)">Add to playlist</ion-item>
     <ion-item button *ngIf="inPlaylist">Delete from playlist</ion-item>
     <ion-item button>Add to queue</ion-item>
 </ion-list>
