--- a/src/app/home/play-music-page/play-music-page.component.html
+++ b/src/app/home/play-music-page/play-music-page.component.html
@@ -26,7 +26,7 @@
                 <ion-label slot="start">0:00</ion-label>
                 <ion-label slot="end">2:00</ion-label>
             </ion-range>
-            <ion-button shape="round" color="light">
+            <ion-button (click)="previousMusique()" shape="round" color="light">
                 <ion-icon slot="icon-only" name="play-back-outline"></ion-icon>
             </ion-button>
             <ion-button (click)="playPause()" shape="round" color="light">
