Ajoute info dynamique dans le tabs et la page musique play

--- a/src/app/home/play-music-page/play-music-page.component.html
+++ b/src/app/home/play-music-page/play-music-page.component.html
@@ -18,8 +18,8 @@
     <ion-card class="card">
         <img class="img" src="https://cdn2.clc2l.fr/t/a/p/apple-music-tNKCFp.jpg" />
         <ion-card-header>
-            <ion-card-title>Music Name</ion-card-title>
-            <ion-card-subtitle>Artiste</ion-card-subtitle>
+            <ion-card-title>{{musique.nom}}</ion-card-title>
+            <ion-card-subtitle>{{musique.idAuteur}}</ion-card-subtitle>
         </ion-card-header>
         <ion-card-content class="content">
             <ion-range class="range" min="0" max="100" value="0" color="light">
