--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -11,8 +11,8 @@
                 <img src="https://store-images.s-microsoft.com/image/apps.33844.9007199266251864.cae5b893-a71b-40d7-abde-a6e8e23675c3.87610d96-f943-498a-89af-cc09d8a5eb7f">
             </ion-col>
             <ion-col size="8" class="ion-align-self-center">
-                <b>All the Good Girls Go to Hell</b><br>
-                <span>Billie Eilish</span>
+                <b>{{musique.nom}}</b><br>
+                <span>{{musique.idAuteur}}</span>
             </ion-col>
             <ion-col size="2" class="ion-text-center ion-no-padding ion-align-self-center">
                 <ion-icon (click)="playPause()" [name]="playIcon" size="large"></ion-icon>
