Progress bar in play music page

--- a/src/app/home/play-music-page/play-music-page.component.html
+++ b/src/app/home/play-music-page/play-music-page.component.html
@@ -22,7 +22,7 @@
             <ion-card-subtitle>Artiste</ion-card-subtitle>
         </ion-card-header>
         <ion-card-content class="content">
-            <ion-range class="range" min="0" max="100" [value]="progress">
+            <ion-range step="0.1" class="range" min="0" max="100" [(ngModel)]="progress" (touchend)="seekTo(progress)" (mouseup)="seekTo(progress)">
                 <ion-label slot="start">{{currentTime}}</ion-label>
                 <ion-label slot="end">{{audioDuration}}</ion-label>
             </ion-range>
