--- a/src/app/home/play-music-page/play-music-page.component.html
+++ b/src/app/home/play-music-page/play-music-page.component.html
@@ -27,13 +27,13 @@
                 <ion-label slot="end">{{audioDuration}}</ion-label>
             </ion-range>
             <ion-button (click)="previousMusique()" shape="round" color="light">
-                <ion-icon slot="icon-only" name="play-back-outline"></ion-icon>
+                <ion-icon slot="icon-only" name="play-back"></ion-icon>
             </ion-button>
             <ion-button (click)="playPause()" shape="round" color="light">
                 <ion-icon slot="icon-only" [name]="playIcon"></ion-icon>
             </ion-button>
             <ion-button (click)="nextMusique()" shape="round" color="light">
-                <ion-icon slot="icon-only" name="play-forward-outline"></ion-icon>
+                <ion-icon slot="icon-only" name="play-forward"></ion-icon>
             </ion-button>
         </ion-card-content>
     </ion-card>
