--- a/src/app/playlist/playlist-detail/playlist-detail.component.html
+++ b/src/app/playlist/playlist-detail/playlist-detail.component.html
@@ -13,12 +13,17 @@
                 <ion-title size="large">{{playlist.nom}}</ion-title>
             </ion-toolbar>
         </ion-header>
-
-        <ion-button expand="block" (click)="openModal()">Add Musique</ion-button>
-
+        <section class="section">
+            <ion-button class="leftbuttons" color="medium" (click)="playThisPlaylist()">Lecture
+                <ion-icon name="play" slot="end" size="large"></ion-icon>
+            </ion-button>
+            <ion-button class="rightbuttons" color="medium" (click)="playThisShuffuledPlaylist()">Random
+                <ion-icon name="shuffle" slot="end" size="large"></ion-icon>
+            </ion-button>
+        </section>
         <ion-list>
-            <ion-item *ngFor="let music of playlist.musiques;">
-                <ion-item class="music" [routerLink]="['music/'+music.nom]" (click)="playMusique(music)">
+            <ion-item detail="false" *ngFor="let music of playlist.musiques;">
+                <ion-item class="music" detail="false" [routerLink]="['music/'+music.nom]" (click)="playMusique(music)">
                     <ion-avatar slot="start">
                         <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRspsZ1EU8IH4m29uCG9eQ6UrrdtfwF8uFtN_nzxOPoj-YHbvv9X80_GApgrWKupB0UdL0&usqp=CAU">
                     </ion-avatar>
