push fix to add playPlaylist

--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -36,9 +36,9 @@
             <ion-label>Playlists</ion-label>
         </ion-tab-button>
 
-        <ion-tab-button tab="albums">
-            <ion-icon [name]="selected == 'albums' ? 'albums' : 'albums-outline'"></ion-icon>
-            <ion-label>Albums</ion-label>
+        <ion-tab-button tab="tracks">
+            <ion-icon [name]="selected == 'tracks' ? 'tracks' : 'musical-note'"></ion-icon>
+            <ion-label>Tracks</ion-label>
         </ion-tab-button>
     </ion-tab-bar>
 </ion-tabs>
