--- a/src/app/playlist/playlist-detail/playlist-detail.component.html
+++ b/src/app/playlist/playlist-detail/playlist-detail.component.html
@@ -32,7 +32,7 @@
                         <p>{{ music.idAuteur }}</p>
                     </ion-label>
                 </ion-item>
-                <ion-icon slot="end" name="ellipsis-vertical" (click)="openPopover($event,music)"></ion-icon>
+                <ion-icon slot="end" name="ellipsis-vertical" (click)="openPopover($event,music,playlist)"></ion-icon>
             </ion-item>
         </ion-list>
     </ion-content>
