--- a/src/app/playlist/playlist.page.html
+++ b/src/app/playlist/playlist.page.html
@@ -25,7 +25,7 @@
                 <ion-label>{{ playlist.nom }}</ion-label>
             </ion-item>
             <ion-item-options side="end">
-                <ion-item-option (click)="delete(playlist)" color="danger">
+                <ion-item-option (click)="delete(playlist.id)" color="danger">
                     <ion-icon slot="icon-only" name="trash"></ion-icon>
                 </ion-item-option>
             </ion-item-options>
