--- a/src/app/modals/create-playlist/create-playlist.component.html
+++ b/src/app/modals/create-playlist/create-playlist.component.html
@@ -1,8 +1,15 @@
-<form [formGroup]="playlistForm" (ngSubmit)="addPlaylist()">
-  <ion-item>
-    <ion-label position="stacked">Name</ion-label>
-    <ion-input formControlName="name"></ion-input>
-  </ion-item>
-
-  <ion-button [disabled]="playlistForm.invalid" expand="block" type="submit">Validate</ion-button>
-</form>
+<ion-header>
+    <ion-toolbar>
+        <ion-title>Create a new playlist</ion-title>
+        <ion-buttons slot="end">
+            <ion-button (click)="dismiss()">Close</ion-button>
+        </ion-buttons>
+    </ion-toolbar>
+</ion-header>
+<ion-content>
+    <ion-item>
+        <ion-label position="floating">Name</ion-label>
+        <ion-input [formControl]="playlistForm" type="text"></ion-input>
+    </ion-item>
+    <ion-button [disabled]="playlistForm.invalid" expand="block" (click)="addPlaylist()">Validate</ion-button>
+</ion-content>
