--- a/src/app/playlist/playlist.page.html
+++ b/src/app/playlist/playlist.page.html
@@ -24,6 +24,11 @@
             <ion-item detail="false" [routerLink]="[playlist?.id]" routerLinkActive="true">
                 <ion-label>{{ playlist.nom }}</ion-label>
             </ion-item>
+            <ion-item-options side="start">
+                <ion-item-option (click)="openOptionModal(playlist)" color="primary">
+                    <ion-icon slot="icon-only" name="settings"></ion-icon>
+                </ion-item-option>
+            </ion-item-options>
             <ion-item-options side="end">
                 <ion-item-option (click)="delete(playlist.id)" color="danger">
                     <ion-icon slot="icon-only" name="trash"></ion-icon>
