--- a/src/app/modals/create-playlist/create-playlist.component.html
+++ b/src/app/modals/create-playlist/create-playlist.component.html
@@ -11,5 +11,5 @@
         <ion-label position="floating">Name</ion-label>
         <ion-input [formControl]="playlistForm" type="text"></ion-input>
     </ion-item>
-    <ion-button [disabled]="playlistForm.invalid" expand="block" (click)="addPlaylist()">Validate</ion-button>
+    <ion-button [disabled]="playlistForm.invalid" expand="full" (click)="addPlaylist()">Validate</ion-button>
 </ion-content>
