--- a/src/app/modals/option-modal/option-modal.component.html
+++ b/src/app/modals/option-modal/option-modal.component.html
@@ -11,20 +11,18 @@
         <ion-label position="floating">Email</ion-label>
         <ion-input [formControl]="playlistForm" type="text"></ion-input>
     </ion-item>
-    <ion-list>
-        <ion-radio-group>
-            <ion-list-header>
-                <ion-label>Share mode</ion-label>
-            </ion-list-header>
-            <ion-item>
-                <ion-label>Read Only</ion-label>
-                <ion-radio slot="start" [(ngModel)]="ReadOnly" (click)="ReadOnly = !ReadOnly" checked="true" color="light"></ion-radio>
-            </ion-item>
-            <ion-item>
-                <ion-label>Read and Write</ion-label>
-                <ion-radio slot="start" [(ngModel)]="!ReadOnly" (click)="ReadOnly = !ReadOnly" color="light"></ion-radio>
-            </ion-item>
-        </ion-radio-group>
-    </ion-list>
-    <ion-button [disabled]="playlistForm.invalid" expand="block" (click)="sharePlaylist()">Validate</ion-button>
+    <ion-radio-group [(ngModel)]="ReadOnly" (ionChange)="changeMode()">
+        <ion-item class="items">
+            <h3>Sharing mode</h3>
+        </ion-item>
+        <ion-item class="items">
+            <ion-label>Read Only</ion-label>
+            <ion-radio slot="start" value="ReadOnly" color="primary"></ion-radio>
+        </ion-item>
+        <ion-item class="items">
+            <ion-label>Read and Write</ion-label>
+            <ion-radio slot="start" value="ReadAndWrite" color="primary"></ion-radio>
+        </ion-item>
+    </ion-radio-group>
+    <ion-button [disabled]="playlistForm.invalid" expand="full" (click)="sharePlaylist()">Validate</ion-button>
 </ion-content>
