--- a/src/app/playlist/playlist.page.html
+++ b/src/app/playlist/playlist.page.html
@@ -20,7 +20,12 @@
     </ion-header>
 
     <ion-list>
-        <ion-item-sliding detail="false" *ngFor="let playlist of playlists$ | async;">
+        <ion-item-divider>
+            <ion-label>
+                My playlists
+            </ion-label>
+        </ion-item-divider>
+        <ion-item-sliding detail="false" *ngFor="let playlist of playlistsOwner$ | async;">
             <ion-item detail="false" [routerLink]="[playlist?.id]" routerLinkActive="true">
                 <ion-label>{{ playlist.nom }}</ion-label>
             </ion-item>
@@ -31,6 +36,45 @@
             </ion-item-options>
             <ion-item-options side="end">
                 <ion-item-option (click)="delete(playlist.id)" color="danger">
+                    <ion-icon slot="icon-only" name="trash"></ion-icon>
+                </ion-item-option>
+            </ion-item-options>
+        </ion-item-sliding>
+    </ion-list>
+    <ion-list>
+        <ion-item-divider sticky="true">
+            <ion-label>
+                Imported playlists with rights
+            </ion-label>
+        </ion-item-divider>
+        <ion-item-sliding detail="false" *ngFor="let playlistRaW of playlistsReadAndWrite$ | async;">
+            <ion-item detail="false" [routerLink]="[playlistRaW?.id]" routerLinkActive="true">
+                <ion-label>{{ playlistRaW.nom }}</ion-label>
+            </ion-item>
+            <ion-item-options side="start">
+                <ion-item-option (click)="openOptionModal(playlistRaW)" color="primary">
+                    <ion-icon slot="icon-only" name="settings"></ion-icon>
+                </ion-item-option>
+            </ion-item-options>
+            <ion-item-options side="end">
+                <ion-item-option (click)="unfollowPlaylistRaW(playlistRaW.id)" color="danger">
+                    <ion-icon slot="icon-only" name="trash"></ion-icon>
+                </ion-item-option>
+            </ion-item-options>
+        </ion-item-sliding>
+    </ion-list>
+    <ion-list>
+        <ion-item-divider sticky="true">
+            <ion-label>
+                Imported playlists with no rights
+            </ion-label>
+        </ion-item-divider>
+        <ion-item-sliding detail="false" *ngFor="let playlistRO of playlistsReadOnly$ | async;">
+            <ion-item detail="false" [routerLink]="[playlistRO?.id]" routerLinkActive="true">
+                <ion-label>{{ playlistRO.nom }}</ion-label>
+            </ion-item>
+            <ion-item-options side="end">
+                <ion-item-option (click)="unfollowPlaylistRO(playlistRO.id)" color="danger">
                     <ion-icon slot="icon-only" name="trash"></ion-icon>
                 </ion-item-option>
             </ion-item-options>
