--- a/src/app/home/morceaux/morceaux.component.html
+++ b/src/app/home/morceaux/morceaux.component.html
@@ -17,7 +17,7 @@
 
         <ion-list>
             <ion-item detail="false" *ngFor="let music of musics">
-                <ion-item class="music" detail="false" [routerLink]="['music/'+music.nom]" (click)="playMusique(music)">
+                <ion-item class="music" detail="false" [routerLink]="['music/'+music.id]" (click)="playMusique(music)">
                     <ion-avatar slot="start">
                         <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRspsZ1EU8IH4m29uCG9eQ6UrrdtfwF8uFtN_nzxOPoj-YHbvv9X80_GApgrWKupB0UdL0&usqp=CAU">
                     </ion-avatar>
