--- a/src/app/playlist/playlist.page.html
+++ b/src/app/playlist/playlist.page.html
@@ -19,8 +19,8 @@
         </ion-toolbar>
     </ion-header>
 
-    <ion-list>
-        <ion-item-divider>
+    <ion-list inset="true">
+        <ion-item-divider sticky="true">
             <ion-label>
                 My playlists
             </ion-label>
@@ -41,7 +41,7 @@
             </ion-item-options>
         </ion-item-sliding>
     </ion-list>
-    <ion-list>
+    <ion-list inset="true">
         <ion-item-divider sticky="true">
             <ion-label>
                 Imported playlists with rights
@@ -63,7 +63,7 @@
             </ion-item-options>
         </ion-item-sliding>
     </ion-list>
-    <ion-list>
+    <ion-list inset="true">
         <ion-item-divider sticky="true">
             <ion-label>
                 Imported playlists with no rights
