--- a/src/app/playlist/playlist.page.html
+++ b/src/app/playlist/playlist.page.html
@@ -5,7 +5,7 @@
         </ion-buttons>
         <ion-buttons slot="end">
             <ion-button (click)="openModal()">
-                <ion-icon name="add-outline"></ion-icon>
+                <ion-icon name="log-out-outline"></ion-icon>
             </ion-button>
         </ion-buttons>
         <ion-title>Playlists</ion-title>
@@ -31,7 +31,7 @@
             </ion-item>
             <ion-item-options side="start">
                 <ion-item-option (click)="openOptionModal(playlist)" color="primary">
-                    <ion-icon slot="icon-only" name="settings"></ion-icon>
+                    <ion-icon slot="icon-only" name="person-add"></ion-icon>
                 </ion-item-option>
             </ion-item-options>
             <ion-item-options side="end">
@@ -53,7 +53,7 @@
             </ion-item>
             <ion-item-options side="start">
                 <ion-item-option (click)="openOptionModal(playlistRaW)" color="primary">
-                    <ion-icon slot="icon-only" name="settings"></ion-icon>
+                    <ion-icon slot="icon-only" name="person-add"></ion-icon>
                 </ion-item-option>
             </ion-item-options>
             <ion-item-options side="end">
@@ -80,4 +80,9 @@
             </ion-item-options>
         </ion-item-sliding>
     </ion-list>
+    <ion-fab horizontal="center" vertical="bottom" slot="fixed">
+        <ion-fab-button color="tertiary" (click)="openModal()">
+            <ion-icon name="add-outline"></ion-icon>
+        </ion-fab-button>
+    </ion-fab>
 </ion-content>
