--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -3,6 +3,11 @@
         <ion-title>
             Home
         </ion-title>
+        <ion-buttons slot="end">
+            <ion-button (click)="disconnect()">
+                <ion-icon size="large" name="log-out-outline"></ion-icon>
+            </ion-button>
+        </ion-buttons>
     </ion-toolbar>
 </ion-header>
 
