--- a/src/app/home/play-music-page/play-music-page.component.html
+++ b/src/app/home/play-music-page/play-music-page.component.html
@@ -3,6 +3,11 @@
         <ion-buttons slot="start">
             <ion-back-button></ion-back-button>
         </ion-buttons>
+        <ion-buttons slot="end">
+            <ion-button (click)="disconnect()">
+                <ion-icon size="large" name="log-out-outline"></ion-icon>
+            </ion-button>
+        </ion-buttons>
         <ion-title>
             Music
         </ion-title>
