--- a/src/app/playlist/playlist.page.html
+++ b/src/app/playlist/playlist.page.html
@@ -4,8 +4,8 @@
             <ion-back-button></ion-back-button>
         </ion-buttons>
         <ion-buttons slot="end">
-            <ion-button (click)="openModal()">
-                <ion-icon name="log-out-outline"></ion-icon>
+            <ion-button (click)="disconnect()">
+                <ion-icon size="large" name="log-out-outline"></ion-icon>
             </ion-button>
         </ion-buttons>
         <ion-title>Playlists</ion-title>
