--- a/src/app/playlist/playlist.page.html
+++ b/src/app/playlist/playlist.page.html
@@ -18,68 +18,67 @@
             <ion-title size="large">Playlists</ion-title>
         </ion-toolbar>
     </ion-header>
-
-    <ion-list inset="true">
-        <ion-item-divider sticky="true">
-            <ion-label>
-                My playlists
-            </ion-label>
-        </ion-item-divider>
-        <ion-item-sliding detail="false" *ngFor="let playlist of playlistsOwner$ | async;">
-            <ion-item detail="false" [routerLink]="[playlist?.id]" routerLinkActive="true">
-                <ion-label>{{ playlist.nom }}</ion-label>
-            </ion-item>
-            <ion-item-options side="start">
-                <ion-item-option (click)="openOptionModal(playlist)" color="primary">
-                    <ion-icon slot="icon-only" name="person-add"></ion-icon>
-                </ion-item-option>
-            </ion-item-options>
-            <ion-item-options side="end">
-                <ion-item-option (click)="delete(playlist.id)" color="danger">
-                    <ion-icon slot="icon-only" name="trash"></ion-icon>
-                </ion-item-option>
-            </ion-item-options>
-        </ion-item-sliding>
-    </ion-list>
-    <ion-list inset="true">
-        <ion-item-divider sticky="true">
-            <ion-label>
-                Imported playlists with rights
-            </ion-label>
-        </ion-item-divider>
-        <ion-item-sliding detail="false" *ngFor="let playlistRaW of playlistsReadAndWrite$ | async;">
-            <ion-item detail="false" [routerLink]="[playlistRaW?.id]" routerLinkActive="true">
-                <ion-label>{{ playlistRaW.nom }}</ion-label>
-            </ion-item>
-            <ion-item-options side="start">
-                <ion-item-option (click)="openOptionModal(playlistRaW)" color="primary">
-                    <ion-icon slot="icon-only" name="person-add"></ion-icon>
-                </ion-item-option>
-            </ion-item-options>
-            <ion-item-options side="end">
-                <ion-item-option (click)="unfollowPlaylistRaW(playlistRaW.id)" color="danger">
-                    <ion-icon slot="icon-only" name="trash"></ion-icon>
-                </ion-item-option>
-            </ion-item-options>
-        </ion-item-sliding>
-    </ion-list>
-    <ion-list inset="true">
-        <ion-item-divider sticky="true">
-            <ion-label>
-                Imported playlists with no rights
-            </ion-label>
-        </ion-item-divider>
-        <ion-item-sliding detail="false" *ngFor="let playlistRO of playlistsReadOnly$ | async;">
-            <ion-item detail="false" [routerLink]="[playlistRO?.id]" routerLinkActive="true">
-                <ion-label>{{ playlistRO.nom }}</ion-label>
-            </ion-item>
-            <ion-item-options side="end">
-                <ion-item-option (click)="unfollowPlaylistRO(playlistRO.id)" color="danger">
-                    <ion-icon slot="icon-only" name="trash"></ion-icon>
-                </ion-item-option>
-            </ion-item-options>
-        </ion-item-sliding>
-    </ion-list>
+    <ion-card>
+        <ion-card-header>
+            <ion-card-subtitle>My playlists</ion-card-subtitle>
+        </ion-card-header>
+        <ion-card-content>
+            <ion-item-sliding detail="false" *ngFor="let playlist of playlistsOwner$ | async;">
+                <ion-item detail="false" [routerLink]="[playlist?.id]" routerLinkActive="true">
+                    <ion-label>{{ playlist.nom }}</ion-label>
+                </ion-item>
+                <ion-item-options side="start">
+                    <ion-item-option (click)="openOptionModal(playlist)" color="primary">
+                        <ion-icon slot="icon-only" name="person-add"></ion-icon>
+                    </ion-item-option>
+                </ion-item-options>
+                <ion-item-options side="end">
+                    <ion-item-option (click)="delete(playlist.id)" color="danger">
+                        <ion-icon slot="icon-only" name="trash"></ion-icon>
+                    </ion-item-option>
+                </ion-item-options>
+            </ion-item-sliding>
+        </ion-card-content>
+    </ion-card>
+    <ion-card>
+        <ion-card-header>
+            <ion-card-subtitle>Imported playlists with rights</ion-card-subtitle>
+        </ion-card-header>
+        <ion-card-content>
+            <ion-item-sliding detail="false" *ngFor="let playlistRaW of playlistsReadAndWrite$ | async;">
+                <ion-item detail="false" [routerLink]="[playlistRaW?.id]" routerLinkActive="true">
+                    <ion-label>{{ playlistRaW.nom }}</ion-label>
+                </ion-item>
+                <ion-item-options side="start">
+                    <ion-item-option (click)="openOptionModal(playlistRaW)" color="primary">
+                        <ion-icon slot="icon-only" name="person-add"></ion-icon>
+                    </ion-item-option>
+                </ion-item-options>
+                <ion-item-options side="end">
+                    <ion-item-option (click)="unfollowPlaylistRaW(playlistRaW.id)" color="danger">
+                        <ion-icon slot="icon-only" name="trash"></ion-icon>
+                    </ion-item-option>
+                </ion-item-options>
+            </ion-item-sliding>
+        </ion-card-content>
+    </ion-card>
+    <ion-card>
+        <ion-card-header>
+            <ion-card-subtitle>My playlists</ion-card-subtitle>
+        </ion-card-header>
+        <ion-card-content>
+            <ion-item-sliding detail="false" *ngFor="let playlistRO of playlistsReadOnly$ | async;">
+                <ion-item detail="false" [routerLink]="[playlistRO?.id]" routerLinkActive="true">
+                    <ion-label>{{ playlistRO.nom }}</ion-label>
+                </ion-item>
+                <ion-item-options side="end">
+                    <ion-item-option (click)="unfollowPlaylistRO(playlistRO.id)" color="danger">
+                        <ion-icon slot="icon-only" name="trash"></ion-icon>
+                    </ion-item-option>
+                </ion-item-options>
+            </ion-item-sliding>
+        </ion-card-content>
+    </ion-card>
     <ion-fab horizontal="center" vertical="bottom" slot="fixed">
         <ion-fab-button color="tertiary" (click)="openModal()">
             <ion-icon name="add-outline"></ion-icon>
