--- a/src/app/home/morceaux/morceaux.component.html
+++ b/src/app/home/morceaux/morceaux.component.html
@@ -18,10 +18,10 @@
             <ion-toolbar>
                 <ion-title size="large">Tracks</ion-title>
             </ion-toolbar>
+            <ion-searchbar #search debounce="500" (ionChange)="_ionChange($event)"></ion-searchbar>
         </ion-header>
-
         <ion-list>
-            <ion-item detail="false" *ngFor="let music of musics">
+            <ion-item detail="false" *ngFor="let music of searchedItem">
                 <ion-item class="music" detail="false" [routerLink]="['music/'+music.id]" (click)="playMusique(music)">
                     <ion-avatar slot="start">
                         <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRspsZ1EU8IH4m29uCG9eQ6UrrdtfwF8uFtN_nzxOPoj-YHbvv9X80_GApgrWKupB0UdL0&usqp=CAU">
